--- a/views/layout_invert.pug
+++ b/views/layout_invert.pug
@@ -43,10 +43,10 @@ html
               i.fa-solid.fa-right-from-bracket.me-1
               |Çıkış Yap
           else
-            a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#loginModal')
+            a.gtr-link(href='javascript:void(0)' role='button' data-popup-open='loginPopup')
               i.fa-solid.fa-user-check.me-1
               |Giriş Yap
-            a.gtr-link(href='javascript:void(0)' role='button' data-bs-toggle='modal' data-bs-target='#registerModal')
+            a.gtr-link(href='javascript:void(0)' role='button' data-popup-open='registerPopup')
               i.fa-solid.fa-user-plus.me-1
               |Kayıt Ol
       p Türkiye'nin En Yeni Online Yazıhanesi
