--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,7 @@ html
         a.navbar-brand(href="/")
           img(src="/images/gotur_vip_logo_white.png" alt="GÖTÜR")
         .d-flex.gap-3.align-items-center
-          a.gtr-link#findMyTicket
+          a.gtr-link#findMyTicket(href='/find-ticket')
             i.fa-solid.fa-magnifying-glass.me-1
             |Biletimi Bul
           if currentUser
